--- a/formulario.html
+++ b/formulario.html
@@ -7,8 +7,7 @@
         href="css/bootstrap.css">
 </head>
 <body>
-        <!-- <form action="#" method="post" class="form-inline"> -->
-        <form action="#" method="post">
+        <form action="#" method="post" class="form-horizontal">
         <div class="form-group">
             <label for="nome" class="control-label col-sm-2">Nome</label>
             <div class="col-sm-10">
@@ -16,8 +15,8 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="endereco">Endereco</label>
-            <input type="text" name="endereco" class="form-control">
+            <label for="endereco" class="control-label col-sm-2">Endereco</label>
+            <input type="text" name="endereco" class="form-control col-sm-10">
         </div>
         <div class="checkbox">
             <label><input type="checkbox"
@@ -38,12 +37,6 @@
                         type="radio"
                         name="genero"
                         value="M">Masculino</label>
-        </div>
-        <div class="radio">
-            <label><input
-                        type="radio"
-                        name="genero"
-                        value="T">Lei do Terceiro Excluido</label>
         </div>
         <div class="form-group">
             <label for="cidade">Cidade:</label>
