--- a/atividade pratica 1/base.html
+++ b/atividade pratica 1/base.html
@@ -8,29 +8,35 @@
 </head>
 <body>
     <div class="web-grid">
-            <header class="box header">
+            <header class="header">
                 <img src="src/ufoplogo.jpg" alt="UFOP LOGO" class="displayed">
             </header>
-            <div class="box side-menu">
-                <a href="about:blank">
+            <div class="side-menu">
+                <a href="cadastro.html">
+                <div class="menu-item">
+                    Cadastro
+                </div></a>
+                <a href="matricula.html">
                 <div class="menu-item">
                     Matricula
                 </div></a>
-                <a href="about:blank">
+                <a href="listaPresenca.html">
                 <div class="menu-item">
                     Presença
                 </div></a>
-                <a href="about:blank">
+                <a href="tabela.html">
                 <div class="menu-item">
                     Tabela
                 </div></a>
-                <a href="about:blank">
+                <a href="contato.html">
                 <div class="menu-item">
                     Contato
                 </div></a>
             </div>
-            <div class="box content"></div>
-            <footer class="box footer"></footer>
+            <div class="content">
+                    <a href="index.html"><button class="btn btn-danger margin-vt-md margin-hz-md">Voltar</button></a>
+            </div>
+            <footer class="footer"></footer>
     </div>
 </body>
 </html>
