--- a/atividade pratica 1/cadastro.html
+++ b/atividade pratica 1/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./lib/bootstrap 3.3.7/css/bootstrap.css">
     <link rel="stylesheet" href="./lib/custom-css/grid-layout.css">
-    <title>Home</title>
+    <title>Document</title>
 </head>
 <body>
     <div class="web-grid">
@@ -33,7 +33,9 @@
                     Contato
                 </div></a>
             </div>
-            <div class="box content"></div>
+            <div class="content">
+                <a href="index.html"><button class="btn btn-danger margin-vt-md margin-hz-md">Voltar</button></a>
+            </div>
             <footer class="box footer"></footer>
     </div>
 </body>
