--- a/atividade pratica 1/listaPresenca.html
+++ b/atividade pratica 1/listaPresenca.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="web-grid">
-            <header class="header">
+            <header class="box header">
                 <img src="src/ufoplogo.jpg" alt="UFOP LOGO" class="displayed">
             </header>
-            <div class="side-menu">
+            <div class="box side-menu">
                 <a href="cadastro.html">
                 <div class="menu-item">
                     Cadastro
@@ -20,7 +20,7 @@
                 <div class="menu-item">
                     Matricula
                 </div></a>
-                <a href="listaPresenca.html">
+                <a href="#">
                 <div class="menu-item">
                     Presença
                 </div></a>
@@ -34,64 +34,76 @@
                 </div></a>
             </div>
             <div class="content">
+                <h2>Sistemas WEB</h2>
                 <table class="table table-condensed table-bordered table-striped">
                     <thead>
                         <tr class="header">
-                            <th>Pos</th>
-                            <th>Artist</th>
-                            <th>Trackname</th>
+                            <th>Código</th>
+                            <th>Nome</th>
+                            <th>E-mail</th>
+                            <th>Assinatura</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <th>1</th>
-                            <th>Lost In The Plot</th>
-                            <th>The Dears</th>
+                            <th>Maycon</th>
+                            <th>mjr@abc.com</th>
+                            <th></th>
                         </tr>
                         <tr>
                             <th>2</th>
-                            <th>Poison</th>
-                            <th>The Constantines</th>
+                            <th>Ana</th>
+                            <th>ana@abd.com</th>
+                            <th></th>
                         </tr>
-                        <tr class="highlighted"> <!-- por algum motivo a classe não pega em certas linhas -->
+                        <tr>
                             <th>3</th>
-                            <th>Plea From A Cat Named Virtute</th>
-                            <th>The Weakerthans</th>
+                            <th>Carlos</th>
+                            <th>carl@bca.com</th>
+                            <th></th>
                         </tr>
                         <tr>
                             <th>4</th>
-                            <th>Melissa Louise</th>
-                            <th>Chixdiggit</th>
+                            <th>Otavio</th>
+                            <th>otv@cab.com</th>
+                            <th></th>
                         </tr>
                         <tr>
                             <th>5</th>
-                            <th>Living Room</th>
-                            <th>Tegan And Sara</th>
+                            <th>Juriscleide</th>
+                            <th>jrc@ld.com</th>
+                            <th></th>
                         </tr>
                         <tr>
                             <th>6</th>
-                            <th>Speed</th>
-                            <th>Bran Van 3000</th>
+                            <th>Diógenes</th>
+                            <th>dgn@md.com</th>
+                            <th></th>
                         </tr>
                         <tr>
                             <th>7</th>
-                            <th>Fast Money Blessing</th>
-                            <th>King Cobb Steelie</th>
+                            <th>Astobaldo</th>
+                            <th>atb@discreta.com</th>
+                            <th></th>
                         </tr>
-                        <tr class="highlighted">
+                        <tr>
                             <th>8</th>
-                            <th>Score</th>
-                            <th>Buck 65</th>
+                            <th>Godofredo</th>
+                            <th>gd@frd.com</th>
+                            <th></th>
                         </tr>
-                        <tr class="highlighted">
+                        <tr>
                             <th>9</th>
-                            <th>Love Travel</th>
-                            <th>Danko Jones</th>
+                            <th>Ananias</th>
+                            <th>ann@ann.com</th>
+                            <th></th>
                         </tr>
                         <tr>
                             <th>10</th>
-                            <th>You Never Let Me Down</th>
-                            <th>Furnaceface</th>
+                            <th>Hastad</th>
+                            <th>htd@tiltado.com</th>
+                            <th></th>
                         </tr></tbody>
                 </table>
                 <a href="index.html"><button class="btn btn-danger margin-vt-md margin-hz-md">Voltar</button></a>
