--- a/atividade pratica 1/sucessoMatricula.html
+++ b/atividade pratica 1/sucessoMatricula.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./lib/bootstrap 3.3.7/css/bootstrap.css">
     <link rel="stylesheet" href="./lib/custom-css/grid-layout.css">
-    <title>Home</title>
+    <title>Document</title>
 </head>
 <body>
     <div class="web-grid">
-            <header class="box header">
+            <header class="header">
                 <img src="src/ufoplogo.jpg" alt="UFOP LOGO" class="displayed">
             </header>
-            <div class="box side-menu">
+            <div class="side-menu">
                 <a href="cadastro.html">
                 <div class="menu-item">
                     Cadastro
@@ -33,8 +33,11 @@
                     Contato
                 </div></a>
             </div>
-            <div class="box content"></div>
-            <footer class="box footer"></footer>
+            <div class="content">
+                <h1 class="text-center">Aluno matriculado com sucesso</h1>
+                    <a href="matricula.html"><button class="btn btn-default margin-vt-md margin-hz-md">Voltar</button></a>
+            </div>
+            <footer class="footer"></footer>
     </div>
 </body>
 </html>
