--- a/atividade pratica 1/base.html
+++ b/atividade pratica 1/base.html
@@ -36,7 +36,14 @@
             <div class="content">
                     <a href="index.html"><button class="btn btn-danger margin-vt-md margin-hz-md">Voltar</button></a>
             </div>
-            <footer class="footer"></footer>
+            <footer class="footer">
+                <div class="col-sm-6 ufop">UNIVERSIDADE FEDERAL DE OURO PRETO</div>
+                <div class="col-sm-6 aluno padding-hz-lg">
+                        Maycon Junior de Souza Miranda<br>
+                        13.1.8143<br>
+                        mayconjr_@live.com
+                </div>
+            </footer>
     </div>
 </body>
 </html>
