--- a/atividade pratica 1/index.html
+++ b/atividade pratica 1/index.html
@@ -34,7 +34,14 @@
                 </div></a>
             </div>
             <div class="box content"></div>
-            <footer class="box footer"></footer>
+            <footer class="footer">
+                <div class="col-sm-6 ufop">UNIVERSIDADE FEDERAL DE OURO PRETO</div>
+                <div class="col-sm-6 aluno padding-hz-lg">
+                        Maycon Junior de Souza Miranda<br>
+                        13.1.8143<br>
+                        mayconjr_@live.com
+                </div>
+            </footer>
     </div>
 </body>
 </html>
