--- a/atividade pratica 1/sucessoMatricula.html
+++ b/atividade pratica 1/sucessoMatricula.html
@@ -37,7 +37,14 @@
                 <h1 class="text-center">Aluno matriculado com sucesso</h1>
                     <a href="matricula.html"><button class="btn btn-default margin-vt-md margin-hz-md">Voltar</button></a>
             </div>
-            <footer class="footer"></footer>
+            <footer class="footer">
+                <div class="col-sm-6 ufop">UNIVERSIDADE FEDERAL DE OURO PRETO</div>
+                <div class="col-sm-6 aluno padding-hz-lg">
+                        Maycon Junior de Souza Miranda<br>
+                        13.1.8143<br>
+                        mayconjr_@live.com
+                </div>
+            </footer>
     </div>
 </body>
 </html>
