--- a/Aula 3 - JavaScript/06-soma-input-css.html
+++ b/Aula 3 - JavaScript/06-soma-input-css.html
@@ -9,39 +9,61 @@
 			var x = parseInt(document.dados.valor1.value);
 			var y = parseInt(document.dados.valor2.value);
 			if(document.dados.valor1.value.length == 0 || isNaN(x)) {
-				window.alert("Informe o primeiro valor corretamente!");
+				// window.alert("Informe o primeiro valor corretamente!");
+                document.getElementById("grupoV1").classList.add("has-error");
+                document.getElementById("alertaV1").style.display = "block";
 				document.dados.valor1.value = "";
 				document.dados.valor1.focus();
 				return;
-			} else if(document.dados.valor2.value.length == 0 || isNaN(x)) {
-				window.alert("Informe o segundo valor corretamente!");
+			} else if(document.dados.valor2.value.length == 0 || isNaN(y)) {
+				// window.alert("Informe o segundo valor corretamente!");
+                document.getElementById("grupoV2").classList.add("has-error");
+                document.getElementById("alertaV2").style.display = "block";
 				document.dados.valor2.value = "";
 				document.dados.valor2.focus();
 				return;
 			}
+            document.getElementById("grupoV1").classList.remove("has-error");
+            document.getElementById("grupoV2").classList.remove("has-error");
+            document.getElementById("alertaV1").style.display = "none";
+            document.getElementById("alertaV2").style.display = "none";
 			var w = x + y;
 			document.dados.resultado.value = w;
 		}
 	</script>
 </head>
 <body>
-	<form name="dados">
-        <div id="GrupoV1" class="form-group">
-            <label for="valor1">Primeiro Valor</label>
-            <input name="valor1" type="text" class="form-control">
+    <div class="container">
+        <div class="jumbotron text-center">
+            <h2>CALCULAR A SOMA - JS/CSS-BOOTSTRAP</h1>
         </div>
+        <form name="dados">
+            <div id="grupoV1" class="form-group">
+                <label for="valor1">Primeiro Valor</label>
+                <input name="valor1" type="text" class="form-control">
 
-        <div id="GrupoV2" class="form-group">
-            <label for="valor2">Segundo Valor</label>
-            <input name="valor2" type="text" class="form-control">
-        </div>
+                <div class="alert alert-danger" style="display: none" id="alertaV1">
+                    Informe o primeiro número corretamente.
+                </div>
+            </div>
 
-        <div id="GrupoRes" class="form-group">
-            <label for="resultado">Resultado</label>
-            <input name="resultado" type="text">
-        </div>
+            <div id="grupoV2" class="form-group">
+                <label for="valor2">Segundo Valor</label>
+                <input name="valor2" type="text" class="form-control">
 
-		<button type="button" onclick="somar()" class="btn btn-info">Somar</button>
-	</form>
+                <div class="alert alert-danger" style="display: none" id="alertaV2">
+                        Informe o segundo número corretamente.
+                </div>
+            </div>
+
+            <div id="GrupoRes" class="form-group">
+                <label for="resultado">Resultado</label>
+                <input name="resultado" type="text" disabled="true" class="form-control">
+            </div>
+
+            <button type="button" onclick="somar()" class="btn btn-primary">Somar</button>
+            <button type="reset" class="btn btn-danger">Reset</button>
+        </form>
+    </div>
 </body>
 </html>
