--- a/jquery/introducao.html
+++ b/jquery/introducao.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Introducao ao jQuery</title>
     <script src="lib/js/jquery-3.2.1.js"></script>
+    <script src="lib/js/funcoes.js"></script>
 </head>
 <body>
     
