--- a/atividade pratica 2/didatica.html
+++ b/atividade pratica 2/didatica.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./lib/bootstrap 3.3.7/css/bootstrap.css">
     <link rel="stylesheet" href="./lib/css/grid-layout.css">
+    <link rel="stylesheet" href="./lib/css/conteudo.css">
+
+    <script src="./lib/jquery/jquery-3.2.1.min.js"></script>
+    <script src="./lib/js/grupos.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -34,6 +38,21 @@
                 </div></a>
             </div>
             <div class="content">
+                <h2>CALCULAR O IMC</h2>
+                <div class="jumbotron text-center">
+                    <h2>CALCULAR O IMC</h2>
+                </div>
+                <div class="opt-group">
+                    <h3>Grupo 1</h5>
+                    <div class="form-group">
+                            <div id="arroz" class="clickable-div option-border a1 btn">
+                                Arroz<img name="arroz" src="src/rice.png" alt="ARROZ">
+                            </div>
+                            <div id="sabao" class="clickable-div option-border a2 btn">
+                                SABONETE<img name="sabao" src="src/soap.png" alt="SABONETE">
+                            </div>
+                    </div>
+                </div>
                     <a href="index.html"><button class="btn btn-danger margin-vt-md margin-hz-md">Voltar</button></a>
             </div>
             <footer class="footer">
