--- a/atividade pratica 2/didatica.html
+++ b/atividade pratica 2/didatica.html
@@ -16,25 +16,13 @@
                 <img src="src/ufoplogo.jpg" alt="UFOP LOGO" class="displayed">
             </header>
             <div class="side-menu">
-                <a href="cadastro.html">
+                <a href="didatica.html">
                 <div class="menu-item">
-                    Cadastro
+                    Didática
                 </div></a>
                 <a href="matricula.html">
                 <div class="menu-item">
                     Matricula
-                </div></a>
-                <a href="listaPresenca.html">
-                <div class="menu-item">
-                    Presença
-                </div></a>
-                <a href="tabela.html">
-                <div class="menu-item">
-                    Tabela
-                </div></a>
-                <a href="contato.html">
-                <div class="menu-item">
-                    Contato
                 </div></a>
             </div>
             <div class="content">
@@ -43,13 +31,53 @@
                     <h2>CALCULAR O IMC</h2>
                 </div>
                 <div class="opt-group">
-                    <h3>Grupo 1</h5>
+                    <h3>Grupo 1</h3>
                     <div class="form-group">
-                            <div id="arroz" class="clickable-div option-border a1 btn">
-                                Arroz<img name="arroz" src="src/rice.png" alt="ARROZ">
+                            <div id="arroz" class="clickable-g1 option-border a1 btn">
+                                ARROZ<img name="arroz" src="src/rice.png" alt="ARROZ">
                             </div>
-                            <div id="sabao" class="clickable-div option-border a2 btn">
+                            <div id="sabao" class="clickable-g1 option-border a2 btn">
                                 SABONETE<img name="sabao" src="src/soap.png" alt="SABONETE">
+                            </div>
+                            <div id="feijao" class="clickable-g1 option-border a2 btn">
+                                FEIJÃO<img name="feijao" src="src/beans.png" alt="FEIJÃO">
+                            </div>
+                            <div id="batata" class="clickable-g1 option-border a2 btn">
+                                BATATA<img name="batata" src="src/potato.png" alt="BATATA">
+                            </div>
+                    </div>
+                </div>
+                <div class="opt-group">
+                    <h3>Grupo 2</h3>
+                    <div class="form-group">
+                            <div id="bicicleta" class="clickable-g2 option-border a1 btn">
+                                BICICLETA<img name="bicicleta" src="src/bike.png" alt="BICICLETA">
+                            </div>
+                            <div id="carro" class="clickable-g2 option-border a2 btn">
+                                CARRO<img name="carro" src="src/car.png" alt="CARRO">
+                            </div>
+                            <div id="algodao" class="clickable-g2 option-border a2 btn">
+                                ALGODÃO<img name="algodao" src="src/sweet.png" alt="ALGODÃO">
+                            </div>
+                            <div id="moto" class="clickable-g2 option-border a2 btn">
+                                MOTO<img name="moto" src="src/moto.png" alt="MOTO">
+                            </div>
+                    </div>
+                </div>
+                <div class="opt-group">
+                    <h3>Grupo 3</h3>
+                    <div class="form-group">
+                            <div id="oculos" class="clickable-g3 option-border a1 btn">
+                                ÓCULOS<img name="oculos" src="src/glasses.png" alt="ÓCULOS">
+                            </div>
+                            <div id="cadeira" class="clickable-g3 option-border a2 btn">
+                                CADEIRA DE PRAIA<img name="cadeira" src="src/chair.png" alt="CADEIRA DE PRAIA">
+                            </div>
+                            <div id="sombrinha" class="clickable-g3 option-border a2 btn">
+                                SOMBRINHA<img name="sombrinha" src="src/umbrella.png" alt="SOMBRINHA">
+                            </div>
+                            <div id="maquina" class="clickable-g3 option-border a2 btn">
+                                MÁQUINA<img name="maquina" src="src/machine.png" alt="MÁQUINA">
                             </div>
                     </div>
                 </div>
