--- a/atividade pratica 2/didatica.html
+++ b/atividade pratica 2/didatica.html
@@ -8,7 +8,7 @@
 
     <script src="./lib/jquery/jquery-3.2.1.min.js"></script>
     <script src="./lib/js/grupos.js"></script>
-    <title>Document</title>
+    <title>Atividade Pratica 2</title>
 </head>
 <body>
     <div class="web-grid">
@@ -26,9 +26,8 @@
                 </div></a>
             </div>
             <div class="content">
-                <h2>CALCULAR O IMC</h2>
                 <div class="jumbotron text-center">
-                    <h2>CALCULAR O IMC</h2>
+                    <h2>Atividade Pratica 2</h2>
                 </div>
                 <div class="opt-group">
                     <h3>Grupo 1</h3>
@@ -79,6 +78,13 @@
                             <div id="maquina" class="clickable-g3 option-border a2 btn">
                                 MÁQUINA<img name="maquina" src="src/machine.png" alt="MÁQUINA">
                             </div>
+                    </div>
+                </div>
+                <div class="opt-group">
+                    <h2>Relacione as Colunas</h2>
+                    <div class="row">
+                        <div class="col-md-6" style="background:#f00">a</div>
+                        <div class="col-md-6" style="background:#00f">a</div>
                     </div>
                 </div>
                     <a href="index.html"><button class="btn btn-danger margin-vt-md margin-hz-md">Voltar</button></a>
