--- a/atividade pratica 2/didatica.html
+++ b/atividade pratica 2/didatica.html
@@ -30,6 +30,8 @@
                     <h2>Atividade Pratica 2</h2>
                 </div>
                 <div class="opt-group">
+                    <h2>Ache o objeto que não pertence ao grupo.</h2>
+                    <div class="btn btn-info" id="ajuda1">Ajuda</div>
                     <h3>Grupo 1</h3>
                     <div class="form-group">
                             <div id="arroz" class="clickable-g1 option-border a1 btn">
@@ -82,11 +84,50 @@
                 </div>
                 <div class="opt-group">
                     <h2>Relacione as Colunas</h2>
+                    <div class="btn btn-info" id="ajuda2">Ajuda</div>
                     <div class="row">
-                        <div class="col-md-6" style="background:#f00">a</div>
-                        <div class="col-md-6" style="background:#00f">a</div>
+                        <div class="col-md-2">
+                            <div class="figure-name" id="quad">Quadrado</div>
+                        </div>
+                        <div class="col-md-4"></div>
+                        <div class="col-md-2">
+                            <img src="src/triangle.png" alt="TRIÂNGULO" class="figure-icon" name="tri">
+                        </div>
+                        <div class="col-md-4"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div class="figure-name" id="ret">Retângulo</div>
+                        </div>
+                        <div class="col-md-4"></div>
+                        <div class="col-md-2">
+                            <img src="src/square.png" alt="QUADRADO" class="figure-icon" name="quad">
+                        </div>
+                        <div class="col-md-4"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div class="figure-name" id="tri">Triangulo</div>
+                        </div>
+                        <div class="col-md-4"></div>
+                        <div class="col-md-2">
+                            <img src="src/circle.png" alt="CIRCULO" class="figure-icon" name="circ">
+                        </div>
+                        <div class="col-md-4"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div class="figure-name" id="circ">Círculo</div>
+                        </div>
+                        <div class="col-md-4"></div>
+                        <div class="col-md-2">
+                            <img src="src/rectangle.png" alt="RETÂNGULO" class="figure-icon" name="ret">
+                        </div>
+                        <div class="col-md-4"></div>
                     </div>
                 </div>
+                    <span id="pont"></span>
+                    <button class="btn btn-success" id="resultado">Gerar Pontuação</button>
                     <a href="index.html"><button class="btn btn-danger margin-vt-md margin-hz-md">Voltar</button></a>
             </div>
             <footer class="footer">
