--- a/atividade pratica 2/didatica.html
+++ b/atividade pratica 2/didatica.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./lib/bootstrap 3.3.7/css/bootstrap.css">
-    <link rel="stylesheet" href="./lib/css/grid-layout.css">
-    <link rel="stylesheet" href="./lib/css/conteudo.css">
+    <link rel="stylesheet" href="./src/css/grid-layout.css">
+    <link rel="stylesheet" href="./src/css/conteudo.css">
 
     <script src="./lib/jquery/jquery-3.2.1.min.js"></script>
-    <script src="./lib/js/grupos.js"></script>
+    <script src="./src/js/grupos.js"></script>
     <title>Atividade Pratica 2</title>
 </head>
 <body>
