--- a/atividade pratica 2/didatica.html
+++ b/atividade pratica 2/didatica.html
@@ -20,12 +20,13 @@
                 <div class="menu-item">
                     Didática
                 </div></a>
-                <a href="matricula.html">
+                <a href="richter.html">
                 <div class="menu-item">
-                    Matricula
+                    Richter
                 </div></a>
             </div>
             <div class="content">
+                <audio src="src/audio/errou.mp3" id="faustao"></audio>
                 <div class="jumbotron text-center">
                     <h2>Atividade Pratica 2</h2>
                 </div>
@@ -126,9 +127,8 @@
                         <div class="col-md-4"></div>
                     </div>
                 </div>
-                    <span id="pont"></span>
                     <button class="btn btn-success" id="resultado">Gerar Pontuação</button>
-                    <a href="index.html"><button class="btn btn-danger margin-vt-md margin-hz-md">Voltar</button></a>
+                    <span id="pont"></span>
             </div>
             <footer class="footer">
                 <div class="col-sm-6 ufop">UNIVERSIDADE FEDERAL DE OURO PRETO</div>
